# RegimeAwareGBWM

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml  report.md  requirements-app.txt  requirements.txt  run_tests.py
app/: streamlit_app.py
configs/: default.yaml  multi_asset.yaml
docs/: animations.js  index.html  styles.css
src/gbwm/: __init__.py  checkpoints.py  cli.py  config.py  experiments.py  objective.py  registry.py
src/gbwm/data/: __init__.py  calibration.py  providers.py
src/gbwm/detection/: __init__.py  filter.py  hmm.py
src/gbwm/envs/: __init__.py  _compat.py  wealth_env.py
src/gbwm/evaluation/: __init__.py  harness.py  metrics.py  plots.py
src/gbwm/explain/: __init__.py  base.py  llm.py  rule_based.py
src/gbwm/policies/: __init__.py  base.py  baselines.py  g_learner.py  q_learner.py  rl_agents.py
src/gbwm/simulation/: __init__.py  gbm.py  regimes.py
src/gbwm/utils/: __init__.py  logging.py  seeding.py
tests/: test_backtest.py  test_baselines.py  test_data.py  test_env.py  test_experiments.py  test_explain.py  test_g_learner.py  test_gbm.py  test_hmm.py  test_metrics.py  test_policy_surface.py  test_q_learner.py  test_regimes.py  test_rl_agents.py
