[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regime-aware-gbwm"
version = "0.1.0"
description = "Regime-Aware Goal-Based Wealth Management Simulator — a goal-based RL lab for dynamic portfolio allocation under changing market regimes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergio" }]
keywords = ["reinforcement-learning", "finance", "portfolio", "gbwm", "g-learning", "regime-detection", "hmm"]

# Dependency-light core (ADR-008): only NumPy/pandas/PyYAML/matplotlib are
# required to run the simulator, environment, G-Learner, NumPy HMM, evaluation
# and CLI. Heavy capabilities are opt-in extras below.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
rl = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2.0",
    "torch>=2.1",
]
data = [
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
]
app = [
    "streamlit>=1.36",
    "plotly>=5.20",
]
accel = [
    "hmmlearn>=0.3.0",   # optional accelerated/alternative HMM backend
    "scipy>=1.10",
]
cli = [
    "rich>=13.0",        # prettier CLI output; argparse works without it
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "black>=24.0",
]
all = [
    "gymnasium>=0.29",
    "stable-baselines3>=2.2.0",
    "torch>=2.1",
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    "streamlit>=1.36",
    "plotly>=5.20",
    "hmmlearn>=0.3.0",
    "scipy>=1.10",
    "rich>=13.0",
]

[project.scripts]
gbwm = "gbwm.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gbwm = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E741"]

[tool.black]
line-length = 100
target-version = ["py310"]
